--- a/bigquery_correlation_matrix.ipynb
+++ b/bigquery_correlation_matrix.ipynb
@@ -5,7 +5,7 @@
    "id": "cfc36f1b-1595-4fcb-b59a-6e822d7b0283",
    "metadata": {},
    "source": [
-    "# A Scalable approach to calculation a correlation matrix on Google BigQuery\n",
+    "# A scalable approach to the calculation of a correlation matrix on Google BigQuery\n",
     "\n",
     "This notebook demonstrates a scalable approach to calculating a correlation matrix for large tables using BigQuery.\n",
     "\n",
@@ -31,8 +31,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!mkdir -p data\n",
-    "!rm data/*"
+    "!mkdir -p data"
    ]
   },
   {
